syntax = "proto3";

option go_package = "helloworld/helloworld";

package helloworld;

service Greeter1 {
    rpc SayHello1 (HelloRequest) returns (HelloReply) {}
    rpc SayHello2 (HelloRequest) returns (stream HelloReply) {}
    rpc SayHello3 (stream HelloRequest) returns (HelloReply) {}
    rpc SayHello4 (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string message = 1;
}

message HelloReply {
    string message = 1;
}